--- a/scss/me.css
+++ b/scss/me.css
@@ -12,12 +12,14 @@
   margin: 0;
 }
 
-body {
+html {
   font-family: "Young_serif", "Young Serif", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: black;
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 ul,
@@ -32,7 +34,7 @@ a {
   color: black;
 }
 a :hover {
-  color: white;
+  color: black;
 }
 
 h1,
@@ -44,26 +46,6 @@ h6 {
   margin: 0;
   padding: 0;
   color: white;
-}
-
-.section1 {
-  background-image: url("/img/background3.jpg");
-}
-
-.section2 {
-  background-image: url("/img/background2.jpg");
-}
-
-.section3 {
-  background-image: url("/img/background.jpg");
-}
-
-.section4 {
-  background-image: url("/img/background3.jpg");
-}
-
-.section5 {
-  background-image: url("/img/background2.jpg");
 }
 
 .nowrap {
@@ -112,14 +94,26 @@ h6 {
 .section::before {
   content: "";
   position: absolute;
+  background-image: url("/img/background3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  background-color: rgba(0, 0, 0, 0.4);
+  filter: blur(10px);
   z-index: 1;
+}
+.section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2;
 }
 .section .fp-overflow {
   height: 100%;
@@ -149,7 +143,7 @@ h6 {
 }
 .section .grid .Remove_image {
   z-index: 100;
-  width: 35%;
+  width: 39%;
   max-width: 450px;
   height: fit-content;
   position: absolute;
@@ -206,6 +200,9 @@ h6 {
   display: grid;
   grid-template-columns: 4fr 6fr;
   grid-template-rows: repeat(10, 1fr);
+}
+.section .item_2:hover h3 {
+  color: white;
 }
 .section .item_3 {
   grid-row: 6/11;
@@ -305,7 +302,7 @@ h6 {
   grid-column: 2/3;
   background-color: rgba(0, 0, 0, 0.726);
   border-radius: 40px;
-  line-height: 1.3;
+  line-height: 1.2;
   margin: 10px 10px 0;
 }
 .section .item_content_2_2 {
@@ -467,7 +464,7 @@ h6 {
 .section .item_content_4_child .wrapper .icon-container.github:hover::before {
   background-color: #1b1f23;
 }
-.section .item_content_4_child .wrapper .icon-container.twitter:hover::before {
+.section .item_content_4_child .wrapper .icon-container.mail:hover::before {
   background-color: #5da9dd;
 }
 .section .item_content_4_child .wrapper .icon-container.youtube:hover::before {
