--- a/scss/me.scss
+++ b/scss/me.scss
@@ -17,13 +17,14 @@
     margin: 0;
 }
 
-body {
+html {
     font-family: 'Young_serif', 'Young Serif', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: black;
     text-align: center;
-
+    width: 100%;
+    height: 100%;
 
 }
 
@@ -42,7 +43,7 @@ a {
     color: black;
 
     :hover {
-        color: white;
+        color: black;
     }
 }
 
@@ -58,25 +59,6 @@ h6 {
 }
 
 
-.section1 {
-    background-image: url('/img/background3.jpg');
-}
-
-.section2 {
-    background-image: url('/img/background2.jpg');
-}
-
-.section3 {
-    background-image: url('/img/background.jpg');
-}
-
-.section4 {
-    background-image: url('/img/background3.jpg');
-}
-
-.section5 {
-    background-image: url('/img/background2.jpg');
-}
 
 .nowrap {
     white-space: nowrap;
@@ -125,18 +107,31 @@ h6 {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-
+    
     &::before {
+        content: "";
+        position: absolute;
+        background-image: url('/img/background3.jpg');
+
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        filter: blur(10px);
+        z-index: 1;}
+    &::after{
         content: "";
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
         background-color: rgb(0, 0, 0, 0.4);
-        z-index: 1;
+        z-index: 2;
     }
 
     .fp-overflow {
@@ -169,7 +164,7 @@ h6 {
 
         .Remove_image {
             z-index: 100;
-            width: 35%;
+            width: 39%;
             max-width: 450px;
 
             height: fit-content;
@@ -213,7 +208,6 @@ h6 {
 
         &:hover {
             transform: scale(1.03);
-
         }
 
         &_1 {
@@ -238,6 +232,9 @@ h6 {
             display: grid;
             grid-template-columns: 4fr 6fr;
             grid-template-rows: repeat(10, 1fr);
+            &:hover{
+                h3{ color: white;}
+            }
 
         }
 
@@ -365,12 +362,8 @@ h6 {
                 grid-column: 2/3;
                 background-color: rgba(0, 0, 0, 0.726);
                 border-radius: 40px;
-                line-height: 1.3;
+                line-height: 1.2;
                 margin: 10px 10px 0;
-
-
-
-
             }
 
             &_2_2 {
@@ -551,7 +544,7 @@ h6 {
                                 background-color: #1b1f23;
                             }
     
-                            &.twitter:hover::before {
+                            &.mail:hover::before {
                                 background-color: #5da9dd;
                             }
     
